fix: restore customization
